# ut-course-simulator

./: .env.sample  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrate/: env.py
migrate/versions/: 0ca64c67fac3_initial_database_schema_creation_with_.py  99c1c471c252_initial_database_schema_creation_with_.py  c86f3bc17a90_initial_database_schema_creation_with_.py  e12f8a8dad5b_initial_database_schema_creation_with_.py  eb5b4f6fc01a_initial_database_schema_creation_with_.py
src/: main.py  model.py
src/api/: dependencies.py  router.py
src/api/routers/: auth.py  course.py  course_selection.py  course_table.py  swagger_oauth.py  teacher.py
src/core/: config.py  database.py  logger.py  security.py
src/crawler/: course_crawler.py  selenuim_helper.py
src/schemas/: course.py  course_selection.py  course_table.py  teacher.py
src/services/: auth_service.py  course_selection_service.py  course_service.py  course_table_service.py  teacher_service.py
