[project]
name = "ut-course-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.115.13",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.12.0",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.24",
]
